[package]
name = "rust"
version = "0.1.0"
edition = "2024"
license-file = "../../LICENSE"

[lib]
path = "lib.rs"
doctest = false

[dependencies]
bytemuck = { version = "1", default-features = false, features = ["aarch64_simd", "derive", "extern_crate_alloc", "min_const_generics", "must_cast"] }
image = { version = "0.25", default-features = false, features = ["bmp", "exr", "gif", "hdr", "ico", "jpeg", "png", "tiff", "webp"] }
pic-scale-safe = "0.1"
tiff = { version = "0.11", features = ["deflate", "fax", "jpeg", "lzw"] }
